--- a/Italian/main/Updater.apk/res/values-it/strings.xml
+++ b/Italian/main/Updater.apk/res/values-it/strings.xml
@@ -94,6 +94,8 @@
     <string name="validate_pkg_failed_msg">"L'aggiornamento che hai scaricato non corrisponde con i nostri dati.Prova a scaricarlo di nuovo."</string>
     <string name="user_intertup_download_title">Downlaod aggiornamento in pausa</string>
     <string name="user_intertup_download_msg">"Il download è stato messo in pausa. Puoi riavviarli in qualsiasi momento dall'applicazione Updater."</string>
+    <string name="check_update_when_wifi_available_sum">Utilizza solo Wi-Fi per cercare aggiornaemnti</string>
+    <string name="auto_update_sum">Cerca automaticamente il momento migliore per scaricare aggiornamenti</string>
     <string name="new_updates_found_notification_title">Aggiornamento di sistema rilevato!</string>
     <string name="network_error">Errore di connessione, provare di nuovo</string>
     <string name="monthly_build">Build Mensile</string>
@@ -128,4 +130,46 @@
     <string name="autosetmode">Impostazioni aggiornamento</string>
     <string name="on_checking">Cerca aggiornamento</string>
     <string name="auto_update">Aggiorna automaticamente</string>
+    <string name="update_feedback">Feedback aggiornamento</string>
+    <string name="update_feedback_end">Ti sei perso la griglia di questa settimana</string>
+    <string name="update_feedback_end_sum">Puoi accedere ogni Martedì</string>
+    <string name="update_feedback_expired">"Ti sei perso la griglia feedback di questa settimana.
+Ma puoi partecipar eil prossimo Martedì"</string>
+    <string name="update_happy">Grandioso!</string>
+    <string name="update_general">Così così</string>
+    <string name="update_sad">Mah (non buono)</string>
+    <string name="update_feel">Cosa ne pensi?</string>
+    <string name="best_update">"Il migliore aggiornamento fin'ora"</string>
+    <string name="worst_update">"Il peggiore aggiornamento fin'ora"</string>
+    <string name="expect">Aspettative</string>
+    <string name="my_update_feel">Il mio feedback</string>
+    <string name="my_best_update">Miglior aggiornamento</string>
+    <string name="my_worst_update">Peggior aggiornamento</string>
+    <string name="my_expect_update">Aspettative</string>
+    <string name="get_update_error">Impossibile recuperare informazioni di aggiornamento</string>
+    <string name="active_xiaomi_account_title">Attiva Mi Account</string>
+    <string name="active_xiaomi_account_msg">PEr attivare il tuo Mi Account, vai su https://account.xiaomi.com/pass/serviceLogin.</string>
+    <string name="active_xiaomi_account">Attiva</string>
+    <string name="update_comment_title">Commenta</string>
+    <string name="update_comment_hint" />
+    <string name="next">Avanti</string>
+    <string name="previous">Indietro</string>
+    <string name="finish">Finito</string>
+    <string name="comment_publish">Invia</string>
+    <string name="edit_comment_title">Modifica commento</string>
+    <string name="edit_comment">Aggiungi commenti</string>
+    <string name="edit_text_default">Scrivi un commento</string>
+    <string name="comment_sending">Invio…</string>
+    <string name="comment_upload_failed">Impossibile inviare commento</string>
+    <string name="comment_upload_hint">Grazie per il tuo feedback!</string>
+    <string name="comment_upload_success">Inviato</string>
+    <string name="comment_invalid">Vota questo aggiornamento (tocca le stelle)</string>
+    <string name="comment_upload_not_logined">Devi prima accedere al tuo Mi Account</string>
+    <string name="fourgrid_hint_text">Grazie per aver scelto la versione DEveloper di MIUI! Raccontaci cosa ne pensi ed aiutaci a migliorare MIUI.</string>
+    <string name="fourgrid_notificaiont">Mostra nella barra di stato</string>
+    <string name="fourgrid_no_notificaiont">Non mostrare nella barra di stato</string>
+    <string name="submit_progress">Invio</string>
+    <string name="submit_success">Inviato correttamente</string>
+    <string name="submit_fail">Invio fallito</string>
+    <string name="submit">Invia</string>
 </resources>
