--- a/Italian/main/Mms.apk/res/values-it/strings.xml
+++ b/Italian/main/Mms.apk/res/values-it/strings.xml
@@ -286,6 +286,7 @@
     <string name="context_menu_add_contact">Aggiungi a Contatti</string>
     <string name="context_menu_view_contact">Mostra Contatto</string>
     <string name="context_menu_contact">Contatto: %1$s</string>
+    <string name="context_menu_add_calendar">Mostra nel  calendario</string>
     <string name="pref_sms_theme_title">Impostazioni tema</string>
     <string name="pref_time_auto_group_title">Gruppo</string>
     <string name="pref_time_auto_group_summary">Raggruppa per orario</string>
@@ -395,10 +396,6 @@
     <string name="mx_online">In linea</string>
     <string name="mx_offline">Non in linea</string>
     <string name="mx_enable_popup_msg">"Questo servizio consente di scambiare messaggi tramite la rete dati. È necessario inviare un sms per attivare il servizio, potrebbero essere applicati dei costi dal tuo operatore. Continuare?"</string>
-    <string name="mx_enable_int_popup_msg">Messaggi Cloud consente di inviare e ricevere messaggi da qualsiasi altro utente MIUI. I costi sono quelli normali del traffico dati, a meno che tu non sia connesso tramite Wi-Fi</string>
-    <string name="mx_activation_done">Messaggi Cloud attivati</string>
-    <string name="mx_activate_popup_msg">Messaggi Cloud consente di inviare e ricevere messaggi da qualsiasi altro utente MIUI. I costi sono quelli normali del traffico dati, a meno che tu non sia connesso tramite Wi-Fi</string>
-    <string name="mx_activate_int_popup_msg">Messaggi Cloud consente di inviare e ricevere messaggi da qualsiasi altro utente MIUI. I costi sono quelli normali del traffico dati, a meno che tu non sia connesso tramite Wi-Fi</string>    
     <string name="mx_btn_enable_now">Attiva MiMessaging</string>
     <string name="loading_mms">Caricamento MMS…</string>
     <string name="add_number_to_sender">Aggiungi numero a %s</string>
@@ -480,6 +477,8 @@
     <string name="user_agreement5">Toccando OK, acconsenti alle condizioni indicate in questi documenti.</string>
     <string name="menu_call">Chiama</string>
     <string name="menu_contact">Contatto</string>
+    <string name="menu_yellowpage">Mostra %s</string>
+    <string name="menu_more">Altro</string>
     <string name="confirm_send_mms">Uno dei destinatari include un indirizzo email. Questo messaggio verrà inviato come MMS, potrebbero quindi essere addebitati costi aggiuntivi dal tuo operatore.</string>
     <string name="quick_reply">Rispondi</string>
     <string name="msglist_continue_to_pull_for_more">Trascina giù per vedere altro</string>
