--- a/Italian/main/Music.apk/res/values-it/strings.xml
+++ b/Italian/main/Music.apk/res/values-it/strings.xml
@@ -218,6 +218,8 @@
     <string name="set_ringtones_successful">%s impostato come suoneria.</string>
     <string name="set_ringtones_failed">Impossibile impostare suoneria.</string>
     <string name="sleep_mode_canceled">Modalità sospensione annullata</string>
+    <string name="priority_storage">Usa scheda SD esterna</string>
+    <string name="priority_storage_summary">Scarica automaticamente su scheda SD esterna, se disponibile</string>
     <string name="max_sleep_time">90</string>
     <string name="min_sleep_time">1</string>
 </resources>
