--- a/Italian/main/NetworkAssistant2.apk/res/values-it/strings.xml
+++ b/Italian/main/NetworkAssistant2.apk/res/values-it/strings.xml
@@ -332,7 +332,12 @@ Controlla il messaggio ricevuto dal tuo provider di servizi per maggiori informa
     <string name="tc_sms_report_notify_get_timeout_title">"Impossibile recuperare informazioni sull'utilizzo dei dati"</string>
     <string name="tc_sms_report_notify_get_timeout_body">"Operazione scaduta. Conferma tramite il tuo operatore che il codice di richiesta dell'SMS sia corretto."</string>
     <string name="tc_sms_report_notify_get_failure_title">"Impossibile recuperare informazioni sull'utilizzo dei dati"</string>
-    <string name="tc_sms_report_notify_get_failure_body">Il tuo operatore non offre questo servizio</string>
     <string name="tc_sms_report_notify_correction_failure_title">Impossibile aggiornare informazioni sul traffico dati</string>
     <string name="tc_sms_report_notify_correction_body">"Vai nell'applicazione Utilizzo dati di Sicurezza e prova manualmente."</string>
+    <string name="tc_sms_report_notify_get_failure_body">Il tuo operatore non offre questo servizio</string>
+    <string name="tc_sms_report_tips_dialog_title">SMS di rapporto utilizzo dati</string>
+    <string name="tc_sms_report_tips_dialog_message">"L'utilizzo dei dati utilizza un SMS particolarmente formattato che ti consente di ricevere informazioni sui dati utilizzati dal tuo operatore. Se questo sistema non funzione correttamente, prova ad aggiornare il formato di utilizzo SMS. Il nuovo formato aggiornato verrà caricato sui nostri server."</string>
+    <string name="tc_sms_report_get_sms_failure">Impossibile ricevere dati sul formato SMS</string>
+    <string name="tc_sms_report_get_sms_timeout">Impossibile ricevere dati sul formato SMS: tempo scaduto</string>
+    <string name="tc_sms_report_get_sms_successs">Formato SMS utilizzo dati aggiornato</string>
 </resources>
